# backend/app/internal/app/api/openapi/types.gen.go
@@ -3,63 +3,14 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.8.2 DO NOT EDIT.
 package openapi
 
-// Defines values for AlertArpress.
-const (
-	AlertArpressN1 AlertArpress = 1
-
-	AlertArpressN2 AlertArpress = 2
-
-	AlertArpressN3 AlertArpress = 3
-)
-
-// Defines values for AlertFeeltmp.
-const (
-	AlertFeeltmpN1 AlertFeeltmp = 1
-
-	AlertFeeltmpN2 AlertFeeltmp = 2
-
-	AlertFeeltmpN3 AlertFeeltmp = 3
-)
-
-// Defines values for AlertRhum.
-const (
-	AlertRhumN1 AlertRhum = 1
-
-	AlertRhumN2 AlertRhum = 2
-
-	AlertRhumN3 AlertRhum = 3
-)
-
-// Defines values for AlertWndspd.
-const (
-	AlertWndspdN1 AlertWndspd = 1
-
-	AlertWndspdN2 AlertWndspd = 2
-
-	AlertWndspdN3 AlertWndspd = 3
-)
-
-// Defines values for AlertWx.
-const (
-	AlertWxN1 AlertWx = 1
-
-	AlertWxN2 AlertWx = 2
-
-	AlertWxN3 AlertWx = 3
-
-	AlertWxN4 AlertWx = 4
-
-	AlertWxN5 AlertWx = 5
-)
-
 // Alert defines model for Alert.
 type Alert struct {
 	// 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
-	Arpress *AlertArpress `json:"arpress"`
+	Arpress *int `json:"arpress,omitempty"`
 
 	// 体感気温: `1` - ？ `2` - ？ `3` - ？
-	Feeltmp *AlertFeeltmp `json:"feeltmp"`
-	Id      string        `json:"id"`
+	Feeltmp *int   `json:"feeltmp,omitempty"`
+	Id      string `json:"id"`
 
 	// 緯度
 	Lat float32 `json:"lat"`
@@ -68,7 +19,7 @@ type Alert struct {
 	Lon float32 `json:"lon"`
 
 	// 湿度: `1` - ？ `2` - ？ `3` - ？
-	Rhum *AlertRhum `json:"rhum"`
+	Rhum *int `json:"rhum,omitempty"`
 
 	// 気温
 	Temp *float32 `json:"temp,omitempty"`
@@ -78,26 +29,11 @@ type Alert struct {
 	Title string `json:"title"`
 
 	// 風速: `1` - ？ `2` - ？ `3` - ？
-	Wndspd *AlertWndspd `json:"wndspd"`
+	Wndspd *int `json:"wndspd,omitempty"`
 
 	// 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
-	Wx *AlertWx `json:"wx"`
+	Wx *int `json:"wx,omitempty"`
 }
-
-// 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
-type AlertArpress int
-
-// 体感気温: `1` - ？ `2` - ？ `3` - ？
-type AlertFeeltmp int
-
-// 湿度: `1` - ？ `2` - ？ `3` - ？
-type AlertRhum int
-
-// 風速: `1` - ？ `2` - ？ `3` - ？
-type AlertWndspd int
-
-// 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
-type AlertWx int
 
 // GetAlertsParams defines parameters for GetAlerts.
 type GetAlertsParams struct {
@@ -109,10 +45,66 @@ type GetAlertsParams struct {
 }
 
 // PostAlertsJSONBody defines parameters for PostAlerts.
-type PostAlertsJSONBody Alert
+type PostAlertsJSONBody struct {
+	// 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
+	Arpress *int `json:"arpress,omitempty"`
+
+	// 体感気温: `1` - ？ `2` - ？ `3` - ？
+	Feeltmp *int `json:"feeltmp,omitempty"`
+
+	// 緯度
+	Lat float32 `json:"lat"`
+
+	// 経度
+	Lon float32 `json:"lon"`
+
+	// 湿度: `1` - ？ `2` - ？ `3` - ？
+	Rhum *int `json:"rhum,omitempty"`
+
+	// 気温
+	Temp *float32 `json:"temp,omitempty"`
+
+	// 通知内容
+	Text  string `json:"text"`
+	Title string `json:"title"`
+
+	// 風速: `1` - ？ `2` - ？ `3` - ？
+	Wndspd *int `json:"wndspd,omitempty"`
+
+	// 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
+	Wx *int `json:"wx,omitempty"`
+}
 
 // PutAlertsAlertIdJSONBody defines parameters for PutAlertsAlertId.
-type PutAlertsAlertIdJSONBody Alert
+type PutAlertsAlertIdJSONBody struct {
+	// 気圧: `1` - 高気圧 `2` - 通常 `3` - 低気圧
+	Arpress *int `json:"arpress,omitempty"`
+
+	// 体感気温: `1` - ？ `2` - ？ `3` - ？
+	Feeltmp *int `json:"feeltmp,omitempty"`
+
+	// 緯度
+	Lat *float32 `json:"lat,omitempty"`
+
+	// 経度
+	Lon *float32 `json:"lon,omitempty"`
+
+	// 湿度: `1` - ？ `2` - ？ `3` - ？
+	Rhum *int `json:"rhum,omitempty"`
+
+	// 気温
+	Temp *float32 `json:"temp,omitempty"`
+
+	// 通知内容
+	Text  *string `json:"text,omitempty"`
+	Title *string `json:"title,omitempty"`
+
+	// 風速: `1` - ？ `2` - ？ `3` - ？
+	Wndspd *int `json:"wndspd,omitempty"`
+
+	// 天気: `1` - 晴 `2` - 曇 `3` - 雨 `4` - 雷 `5` - 雪
+	Wx *int `json:"wx,omitempty"`
+}
 
 // PostAlertsJSONRequestBody defines body for PostAlerts for application/json ContentType.
 type PostAlertsJSONRequestBody PostAlertsJSONBody
