# docs/openapi.yaml
@@ -35,7 +35,71 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Alert"
+              properties:
+                title:
+                  type: string
+                  example: 雨が降ったとき教えて！
+                lat:
+                  description: 緯度
+                  type: number
+                  format: float
+                  example: 35.6769883
+                lon:
+                  description: 経度
+                  type: number
+                  format: float
+                  example: 139.7588499
+                wx:
+                  type: integer
+                  description: >
+                    天気:
+                    `1` - 晴
+                    `2` - 曇
+                    `3` - 雨
+                    `4` - 雷
+                    `5` - 雪
+                temp:
+                  description: 気温
+                  type: number
+                  format: float
+                  example: 20.4
+                arpress:
+                  type: integer
+                  description: >
+                    気圧:
+                    `1` - 高気圧
+                    `2` - 通常
+                    `3` - 低気圧
+                wndspd:
+                  type: integer
+                  description: >
+                    風速:
+                    `1` - ？
+                    `2` - ？
+                    `3` - ？
+                rhum:
+                  type: integer
+                  description: >
+                    湿度:
+                    `1` - ？
+                    `2` - ？
+                    `3` - ？
+                feeltmp:
+                  type: integer
+                  description: >
+                    体感気温:
+                    `1` - ？
+                    `2` - ？
+                    `3` - ？
+                text:
+                  description: 通知内容
+                  type: string
+                  example: おはよう！今日は雨が降っているよ。傘を持つようにしよう！
+              required:
+                - title
+                - lat
+                - lon
+                - text
       responses:
         "201":
           description: Created
@@ -54,7 +118,66 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/Alert"
+              properties:
+                title:
+                  type: string
+                  example: 雨が降ったとき教えて！
+                lat:
+                  description: 緯度
+                  type: number
+                  format: float
+                  example: 35.6769883
+                lon:
+                  description: 経度
+                  type: number
+                  format: float
+                  example: 139.7588499
+                wx:
+                  type: integer
+                  description: >
+                    天気:
+                    `1` - 晴
+                    `2` - 曇
+                    `3` - 雨
+                    `4` - 雷
+                    `5` - 雪
+                temp:
+                  description: 気温
+                  type: number
+                  format: float
+                  example: 20.4
+                arpress:
+                  type: integer
+                  description: >
+                    気圧:
+                    `1` - 高気圧
+                    `2` - 通常
+                    `3` - 低気圧
+                wndspd:
+                  type: integer
+                  description: >
+                    風速:
+                    `1` - ？
+                    `2` - ？
+                    `3` - ？
+                rhum:
+                  type: integer
+                  description: >
+                    湿度:
+                    `1` - ？
+                    `2` - ？
+                    `3` - ？
+                feeltmp:
+                  type: integer
+                  description: >
+                    体感気温:
+                    `1` - ？
+                    `2` - ？
+                    `3` - ？
+                text:
+                  description: 通知内容
+                  type: string
+                  example: おはよう！今日は雨が降っているよ。傘を持つようにしよう！
       responses:
         "204":
           description: No Content
@@ -87,13 +210,6 @@ components:
           example: 139.7588499
         wx:
           type: integer
-          nullable: true
-          enum:
-            - 1
-            - 2
-            - 3
-            - 4
-            - 5
           description: >
             天気:
             `1` - 晴
@@ -108,11 +224,6 @@ components:
           example: 20.4
         arpress:
           type: integer
-          nullable: true
-          enum:
-            - 1
-            - 2
-            - 3
           description: >
             気圧:
             `1` - 高気圧
@@ -120,11 +231,6 @@ components:
             `3` - 低気圧
         wndspd:
           type: integer
-          nullable: true
-          enum:
-            - 1
-            - 2
-            - 3
           description: >
             風速:
             `1` - ？
@@ -132,11 +238,6 @@ components:
             `3` - ？
         rhum:
           type: integer
-          nullable: true
-          enum:
-            - 1
-            - 2
-            - 3
           description: >
             湿度:
             `1` - ？
@@ -144,11 +245,6 @@ components:
             `3` - ？
         feeltmp:
           type: integer
-          nullable: true
-          enum:
-            - 1
-            - 2
-            - 3
           description: >
             体感気温:
             `1` - ？
